Refactor: 用异常抛出的方式优化日志结构 Feat: 账单类的增删改查与同步