@@ -4,17 +4,21 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
+import com.jngyen.bookkeeping.backend.exception.exchangeRate.BillException;
+import com.jngyen.bookkeeping.backend.exception.exchangeRate.ExchangeRateException;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataAccessResourceFailureException;
 import org.springframework.stereotype.Service;
 
 import com.jngyen.bookkeeping.backend.factory.dto.CommonDtoFactory;
 import com.jngyen.bookkeeping.backend.mapper.BillBudgetMapper;
 import com.jngyen.bookkeeping.backend.pojo.dto.bill.BillBudgetDTO;
 import com.jngyen.bookkeeping.backend.pojo.po.bill.BillBudgetPO;
-import com.jngyen.bookkeeping.backend.pojo.po.bill.BudgetTimeType;
+import com.jngyen.bookkeeping.backend.enums.bill.BudgetTimeType;
 import com.jngyen.bookkeeping.backend.service.bill.BillBudgetService;
 import com.jngyen.bookkeeping.backend.service.bill.BillDealTypeService;
 import com.jngyen.bookkeeping.backend.service.common.exchangeRate.ConvertCurrency;
@@ -22,6 +26,7 @@ import com.jngyen.bookkeeping.backend.service.common.exchangeRate.GetExchangeRat
 import com.jngyen.bookkeeping.backend.service.user.UserConfigService;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
@@ -41,10 +46,7 @@ public class BillBudgetServiceImpl implements BillBudgetService{
     // 实现BillBudgetService类
     /**
      * 前端传入包含用户自定义预算开始时间，结束时间统一根据时间类型计算，并且判断闰年和闰月
-     * 
-     * @param userUuid
-     * @param newBudget
-     * @return
+
      */
     public String insertBudget(BillBudgetDTO newBudget) {
         // 检查预算是否冲突
@@ -96,8 +98,14 @@ public class BillBudgetServiceImpl implements BillBudgetService{
         // 查询到对应记录
         BillBudgetPO existBudget = billBudgetMapper.selectBudgetByUuid(newBudget.getBudgetUuid());
         // 更新本币或者金额
-        if(newBudget.getHomeCurrency() != existBudget.getHomeCurrency() || newBudget.getBudgetAmount() != existBudget.getBudgetAmount()) {
-            updateBaseCurrencyOrBudgetAmount(newBudget);
+        if(!Objects.equals(newBudget.getHomeCurrency(), existBudget.getHomeCurrency()) || !Objects.equals(newBudget.getBudgetAmount(), existBudget.getBudgetAmount())) {
+            try {
+                updateBaseCurrencyOrBudgetAmount(newBudget);
+            }catch (BillException | ExchangeRateException e) {
+                log.warn("Failed to update base currency or budget amount", e);
+                return "Failed to update base currency or budget amount";
+            }
+
         }
         // 更新对应时间范围或者类别
         setStartAndEndDate(newBudget);
@@ -109,27 +117,21 @@ public class BillBudgetServiceImpl implements BillBudgetService{
     }
 
     // 更新某条预算的本币或者预算金额
-    public void updateBaseCurrencyOrBudgetAmount(BillBudgetDTO newBudget) {
+    public void updateBaseCurrencyOrBudgetAmount(BillBudgetDTO newBudget) throws BillException, ExchangeRateException {
         // 检查 budget 是否合规
         if (!isBudgetExists(newBudget.getBudgetUuid()) || !isBudgetChange(newBudget) || isBudgetConflict(newBudget)) {
-            log.error("Check your budget's time or uuid or range or category or amount");
+           throw new BillException("Check your budget's time or uuid or range or category or amount","检查预算的时间或者uuid或者范围或者类别或者金额");
         }
         // 更新本币或者与预算金额
         BillBudgetPO existBudget = billBudgetMapper.selectBudgetByUuid(newBudget.getBudgetUuid());
-        if (!getExchangeRate.isCurrencyExist(newBudget.getHomeCurrency())
-                || !getExchangeRate.isCurrencyExist(existBudget.getHomeCurrency())) {
-            log.error("Currency {} does not exist", newBudget.getHomeCurrency());
-            return;
+        try{
+            BigDecimal newAmount = convertCurrency.convertCurrency(newBudget.getUserUuid(), newBudget.getHomeCurrency(),
+                    existBudget.getHomeCurrency(), newBudget.getBudgetAmount());
+            newBudget.setBudgetAmount(newAmount);
+            newBudget.setHomeCurrency(existBudget.getHomeCurrency());
+        } catch (ExchangeRateException e) {
+            throw new BillException("Failed to convert currency when update base currency Or budget amount","更新某条预算的本币或者预算金额失败", e);
         }
-        BigDecimal newAmount = convertCurrency.convertCurrency(newBudget.getUserUuid(), newBudget.getHomeCurrency(),
-                existBudget.getHomeCurrency(), newBudget.getBudgetAmount());
-        if (newAmount == null) {
-            // HACK: 后续改用使用异常抛出机制
-            log.error("Failed to convert currency");
-            return;
-        }
-        newBudget.setBudgetAmount(newAmount);
-        newBudget.setHomeCurrency(existBudget.getHomeCurrency());
     }
 
     // 查询某个时间类型预算最新预算:不知道Uuid的情况
@@ -200,30 +202,23 @@ public class BillBudgetServiceImpl implements BillBudgetService{
     // 检查预算是否存在, true 为存在
     public boolean isBudgetExists(String budgetUuid) {
         BillBudgetPO existBudget = billBudgetMapper.selectBudgetByUuid(budgetUuid);
-        if (existBudget == null) {
-            return false;
-        }
-        return true;
+        return existBudget != null;
     }
 
     // 检查传入预算是否改变
     public boolean isBudgetChange(BillBudgetDTO newBudget) {
         BillBudgetPO existBudget = billBudgetMapper.selectBudgetByUuid(newBudget.getBudgetUuid());
         BillBudgetDTO existBudgetDTO = CommonDtoFactory.convertToDto(existBudget, BillBudgetDTO.class);
-        if (existBudgetDTO.equals(newBudget)) {
-            return false;
-        }
-        return true;
+        return !Objects.equals(existBudgetDTO, newBudget);
     }
 
     // 检查是否存在预算时间冲突
     public boolean isBudgetConflict(BillBudgetDTO newBudget) {
-        BillBudgetPO existBudgetConflict = getBudgetConfilct(newBudget);
-        if (existBudgetConflict != null && ! (existBudgetConflict.getBudgetUuid()==newBudget.getBudgetUuid())) {
+        BillBudgetPO existBudgetConflict = getBudgetConflict(newBudget);
+        if (existBudgetConflict != null && ! (Objects.equals(existBudgetConflict.getBudgetUuid(), newBudget.getBudgetUuid()))) {
             return false;
         }
-        log.info("Budget for " + newBudget.getCategoryName() + " from " + newBudget.getStartDate() + " to "
-                + newBudget.getEndDate() + " conflict with exist budget please update it");
+        log.info("Budget for {} from {} to {} conflict with exist budget please update it", newBudget.getCategoryName(), newBudget.getStartDate(), newBudget.getEndDate());
         return true;
     }
 
@@ -258,26 +253,23 @@ public class BillBudgetServiceImpl implements BillBudgetService{
     }
 
     // 检查日期方法，复合索引查询, 通过现在时间是否处在已有同类同名记录的有限区间内来判断，有就返回对应PO，无返回null
-    public BillBudgetPO getBudgetConfilct(BillBudgetDTO newBudget) {
+    public BillBudgetPO getBudgetConflict(BillBudgetDTO newBudget) {
         List<BillBudgetPO> result = billBudgetMapper.checkBudgetExist(newBudget);
-        if (result.size() == 0) {
+        if (result.isEmpty()) {
             return null;
         } else if (result.size() > 1) {
             log.error("Duplicate budget found for userUuid: {}, budgetTimeType: {}, categoryName: {}",
                     newBudget.getUserUuid(),
                     newBudget.getBudgetTimeType(), newBudget.getCategoryName());
-            return result.get(0);
+            return result.getFirst();
         } else {
-            return result.get(0);
+            return result.getFirst();
         }
     }
 
     // 检查categoryName是否存在,ture 为存在
     public boolean checkCategoryExists(String userUuid, String categoryName) {
-        if (billDealTypeService.isTypeExist(userUuid, categoryName)) {
-            return true;
-        }
-        return false;
+        return billDealTypeService.isTypeExist(userUuid, categoryName);
     }
 
     // 检查DTO日期是否正确, true 为正确
@@ -286,42 +278,70 @@ public class BillBudgetServiceImpl implements BillBudgetService{
         if (userConfigService.queryUserConfigByUuid(newBudget.getUserUuid()).getIsUseCustomData()) {
             if (newBudget.getStartDate() == null || newBudget.getEndDate() == null
                     || newBudget.getStartDate().isAfter(newBudget.getEndDate())) {
-                log.error(newBudget.getStartDate() + " is after " + newBudget.getEndDate());
+                log.error("{} is after {}", newBudget.getStartDate(), newBudget.getEndDate());
                 return false;
             }
             return true;
-        } else if (newBudget.getStartDate() == null) {
-            return false;
-        }
-        return true;
+        } else return newBudget.getStartDate() != null;
     }
 
-    // 更新余额，供其他账单使用，使用减法, date是交易时间，transactionCurrency是账单货币种类
-    public void updateRemainingAmount(String userUuid, String dealtype, String transactionCurrency, BigDecimal amount,
-            LocalDateTime date) {
 
+
+
+    @Transactional
+    /**
+     * @Date: 2024/10/20
+     * @Description:更新余额，供其他账单使用，使用减法进行更新，因此收入为负数，支出为正数
+     *
+     * @param userUuid
+     * @param dealtype
+     * @param transactionCurrency
+     * @param amount
+     * @param date
+     * @param isDelete 是否是删除账单，true 为删除，需要回撤金额
+     * @return void
+     */
+
+    public void updateRemainingAmount(String userUuid, String dealtype, String transactionCurrency, BigDecimal amount,
+            LocalDateTime date ) throws BillException {
+
+        if (amount == null || amount.compareTo(BigDecimal.ZERO) == 0) {
+            throw new BillException("Amount is null or zero", "金额为空或者为零");
+        }
         BillBudgetDTO updatedBudget = new BillBudgetDTO();
         updatedBudget.setCategoryName(dealtype);
         updatedBudget.setUserUuid(userUuid);
         List<BillBudgetDTO> budgets = selectBudgetsByDealType(updatedBudget);
         if (budgets.isEmpty()) {
-            log.error("No budget for userUuid: {}, dealtype: {}", userUuid, dealtype);
-            return;
+            throw new BillException("No budget found for userUuid: " + userUuid + ", dealtype: " + dealtype,
+                    "未找到对应预算");
         }
         // 将金额转换为记账时的本币
-        BigDecimal amountInHomeCurrency = convertCurrency.convertCurrency(userUuid, transactionCurrency,
-            budgets.get(0).getHomeCurrency(), amount);
-        log.info(transactionCurrency, budgets, amountInHomeCurrency);
-        // 更新周、月、年的对应预算
-        updateRemainingAmountByTimeType(budgets, amountInHomeCurrency, BudgetTimeType.WEEKLY, date.toLocalDate());
-        updateRemainingAmountByTimeType(budgets, amountInHomeCurrency, BudgetTimeType.MONTHLY, date.toLocalDate());
-        updateRemainingAmountByTimeType(budgets, amountInHomeCurrency, BudgetTimeType.YEARLY, date.toLocalDate());
+        BigDecimal amountInHomeCurrency = null;
+
+        try {
+            amountInHomeCurrency = convertCurrency.convertCurrency(userUuid, transactionCurrency,
+                    budgets.getFirst().getHomeCurrency(), amount);
+
+        } catch (ExchangeRateException e) {
+            throw new BillException(e.getMsgEn() + " <- when update remain budget amount ", " 更新预算余额时 -> " + e.getMsgZh(), e);
+        }  // 更新周、月、年的对应预算
+
+        try {
+            updateRemainingAmountByTimeType(budgets, amountInHomeCurrency, BudgetTimeType.WEEKLY, date.toLocalDate());
+            updateRemainingAmountByTimeType(budgets, amountInHomeCurrency, BudgetTimeType.MONTHLY, date.toLocalDate());
+            updateRemainingAmountByTimeType(budgets, amountInHomeCurrency, BudgetTimeType.YEARLY, date.toLocalDate());
+        }catch (DataAccessResourceFailureException e) {
+            String errorMsg = String.format("Failed to update remaining amount for user %s, dealtype %s. Database access failed while updating budget amount.",
+                    userUuid, dealtype);
+            throw new BillException(errorMsg, "更新余额时数据库链接失败", e);
+        }
     }
 
     // 更新余额的辅助方法
     public void updateRemainingAmountByTimeType(List<BillBudgetDTO> budgets, BigDecimal amount, BudgetTimeType timeType,
             LocalDate modifiedTime) {
-                log.info("amout: {}", amount);
+
         budgets.stream()
                 .filter(budget -> budget.getBudgetTimeType() == timeType)
                 .filter(budget -> (modifiedTime.isEqual(budget.getStartDate())
@@ -329,7 +349,10 @@ public class BillBudgetServiceImpl implements BillBudgetService{
                         (modifiedTime.isEqual(budget.getEndDate()) || modifiedTime.isBefore(budget.getEndDate())))
                 .forEach(budget -> {
                     BillBudgetPO updatedBudget = billBudgetMapper.selectBudgetByUuid(budget.getBudgetUuid());
-                    log.info("Update budget: {}", updatedBudget);
+                    if (updatedBudget == null) {
+                        log.warn("Budget with uuid {} does not exist", budget.getBudgetUuid());
+                        return;
+                    }
                     updatedBudget.setRemainingAmount(budget.getRemainingAmount().subtract(amount));
                     updatedBudget.setGmtModified(LocalDateTime.now());
                     billBudgetMapper.updateBudgetById(updatedBudget);
